# hello-world

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe/: Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe.db
Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe/ffmpeg-8.1.2-full_build/: README.txt
src/: library.cpp  library.h  lrcparser.cpp  lrcparser.h  lyricsrenderer.cpp  lyricsrenderer.h  lyricswidget.cpp  lyricswidget.h  mainwindow.cpp  mainwindow.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistmanager.cpp  playlistmanager.h  playmodestrategy.cpp  playmodestrategy.h  spectrumwidget.cpp  spectrumwidget.h  track.cpp  track.h  transcoder.cpp  transcoder.h
